@@ -1,5 +1,6 @@
 2018-01-XX Jan Kotanski <jan.kotanski@desy.de>
 	* add suport for build-in tango decoders
+	* add configuration switch for sardana
 	* tagged as 0.13.0
 
 2018-01-22 Jan Kotanski <jan.kotanski@desy.de>
